--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "node --max_old_space_size=8192 node_modules/.bin/react-scripts start --progress --env.prod",
+    "build:watch": "node --max_old_space_size=8192 node_modules/.bin/react-scripts start --progress --env.prod --watch",
+    "build:normal": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
